--- a/src/components/styles/Logo.css
+++ b/src/components/styles/Logo.css
@@ -1,6 +1,3 @@
-.logo {
-    animation: logo infinite 10000ms linear;
-}
 
 @keyframes logo {
     from {
@@ -12,20 +9,25 @@
 }
 
 .logo-wrap {
-    margin-top: 150px;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
 }
 
-.logo-input {
-    position: relative;
-    display: block;
-    margin : 0 auto;
-    margin-bottom: 10px;
-} 
+.slider-box {
+    margin-top: 100px;
+}
 
-.logo-button {
-    position: relative;
-    display: block;
-    margin : 0 auto
+.speed-num {
+    color: yellow;
+    margin: 50px;
+    font-family: monospace;
+    font-size: 20px;
+    margin: 0;
+}
+
+.slider {
+    width: 30%;
+    cursor: pointer;
+    
 }
