--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -1,6 +1,6 @@
 .header {
     background-color: #16161e;
-    border-bottom: 1px solid yellow;
+    border-bottom: 2px solid yellow;
     position: fixed;
     height: 30px;
     width: 100%;
@@ -12,6 +12,7 @@
 .nav {
     padding-left: 100px;
     padding-right: 100px;
+    padding-bottom: 5px;
     border: .5px solid yellow;
     text-decoration: none;
     font-family: monospace;
