--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -1,10 +1,51 @@
-
+.about {
+    margin-top: 50px;
+}
 .white {
     color: white;
     font-family: monospace;
+    border: 1px solid yellow;
+    padding: 10px;
+    font-size: 20px;
+    margin-bottom: 10px;
+
+}
+.white:hover {
+    background-color: yellow;
+    color: black;
 }
 
-.about-parag {
+.about1 {
+    width: 300px;
+    height: 250px;
+    margin-left: 50px;
+    margin-top: 110px;
+}
+
+.about2 {
+    width: 200px;
+    height: 300px;
+    margin-left: 510px;
+    margin-top: -200px;
+}
+
+.about3 {
+    width: 300px;
+    height: 300px;
+    margin-left: 860px;
+    margin-top: -150px;
+}
+
+.about4 {
     width: 500px;
-    height: 200px
+    height: 300px;
+    margin-left: 1350px;
+    margin-top: -500px;
+}
+
+.about5 {
+    width: 300px;
+    height: 300px;
+    margin-left: 1300px;
+    margin-top: 0px;
 }
