--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -10,18 +10,27 @@
 }
 
 .nav {
-    padding-left: 100px;
-    padding-right: 100px;
+    float: right;
+    padding-left: 50px;
+    padding-right: 50px;
     padding-bottom: 5px;
-    border: .5px solid yellow;
     text-decoration: none;
     font-family: monospace;
     font-size: 20px;
-    margin: 50px;
     color: white;
+    margin-right: 20px;
 }
 
 .nav:hover {
     background-color: yellow;
     color: black;
+}
+
+@media only screen and (max-width: 1000px) {
+    .nav  {
+        float: left;
+        font-size: 20px;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
 }
