--- a/src/components/styles/Colors.css
+++ b/src/components/styles/Colors.css
@@ -1,18 +1,10 @@
-.languages {
+.colors {
     width: 25px;
     height: 25px;
-    border-radius: 20%;
-    color: #16161e;
     margin: auto;
-    font-size: 20px;
-    font-weight: bold;
-    color: black;
-    font-family: monospace;
-    display: flex;
-    flex-direction: column;
 }
 
-.languages-box {
+.color-box {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
     margin-top: 80px;
@@ -31,5 +23,14 @@
     position: fixed;
     margin-bottom: 20px;
     margin-top: 20px;
+}
+
+.canvas {
+    width: 80%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    margin-top: 50px;
 }
 
