--- a/src/components/styles/Menu.css
+++ b/src/components/styles/Menu.css
@@ -1,7 +1,7 @@
 .menu-container {
     position: relative;
     margin-left: 10px;
-    margin-top: 50px;
+    margin-top: 50px; 
 }
 
 .menu {
@@ -36,6 +36,15 @@
     font-size: 50px;
     cursor: pointer;
     color: yellow;
+}
+
+
+.menu-button2 {
+    display: flex;
+    position: relative;
+    font-size: 50px;
+    cursor: pointer;
+    color: rgb(9, 255, 0);
 }
 
 .menu-link {
