--- a/src/components/styles/Bar.css
+++ b/src/components/styles/Bar.css
@@ -1,3 +1,4 @@
+
 .bar-wrapper {
     border-bottom: 2px solid yellow;
     margin-bottom: 20px;
@@ -6,7 +7,8 @@
 }
 
 .bar {
-    height: 300px;
-    background-image: linear-gradient(to left,#F4D03F,#A569BD,#CD6155,#5499C7,#52BE80,#F0F3F4);
+    height: 310px;
+    background-color: #16161e;
     transition: all 100ms linear;
+    background-image: linear-gradient(to left,#F4D03F,#A569BD,#CD6155,#5499C7,#52BE80,#F0F3F4);
 }
