--- a/src/components/styles/Logo.css
+++ b/src/components/styles/Logo.css
@@ -11,12 +11,16 @@
 .logo-wrap {
     display: flex;
     flex-direction: column;
-    margin-top: -30px;
+    margin-top: 20px;
+}
 
+.message {
+    color: yellow;
 }
 
 .logo img {
     width: 40%;
+    user-select: none;
 }
 
 .speed-num {
@@ -25,16 +29,17 @@
     font-family: monospace;
     font-size: 20px;
     margin: 0;
+    padding: 0px 10px;
 }
 
 .slider {
     width: 30%;
-    cursor: pointer;
+    cursor: pointer;   
 }
 
 @media only screen and (max-width: 1000px) {
    .logo img {
-       width: 90%;
+       width: 80%;
    }
 
    .logo-wrap {
