--- a/src/components/styles/Menu.css
+++ b/src/components/styles/Menu.css
@@ -11,7 +11,7 @@
     z-index: 999;
     left: -22vw;
     transition: left 0.5s ease-in;
-    margin-top: 25px;
+    margin-top: 15px;
 }
 
 .menu.show {
@@ -24,7 +24,7 @@
 }
 
 .menu-link:hover {
-    background-color: yellow;
+    background-color: white;
 }
 
 .menu-list {
@@ -34,9 +34,10 @@
 .menu-button {
     display: flex;
     position: relative;
-    font-size: 50px;
+    font-size: 30px;
     cursor: pointer;
-    color: yellow;
+    color: #16161e;
+    margin-top: 12px;
 }
 
 .menu-button2 {
@@ -44,8 +45,8 @@
     position: relative;
     font-size: 30px;
     cursor: pointer;
-    color: yellow;
-    margin-top: 10px;
+    color: #16161e;
+    margin-top: 12px;
 }
 
 
