--- a/src/components/styles/Colors.css
+++ b/src/components/styles/Colors.css
@@ -1,6 +1,7 @@
 
-h2 {
-    color: yellow;
+h1 {
+    color: white;
+    font-family: monospace;
 }
 
 .colors {
@@ -12,7 +13,7 @@ h2 {
 .color-box {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20px, 1fr));
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 20px;
     gap: 5px;
 }
@@ -24,3 +25,4 @@ h2 {
     width: 80%;
     margin-top: 5px;
 }
+
