--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -1,6 +1,3 @@
-.about {
-    margin-top: 10px;
-}
 
 .about-box {
     display: grid;
@@ -26,7 +23,7 @@ h2 {
 }
 
 .box1 {
-    margin-top: 120px;
+    margin-top: 200px;
 }
 
 .text2 {
@@ -40,7 +37,11 @@ h2 {
 }
 
 .box2 {
-    margin-top: 270px;
+    margin-top: 60px;
+}
+
+.box5 {
+    margin-top: -50px;
 }
 
 .text3 {
@@ -98,8 +99,8 @@ h2 {
 .text5:hover,
 .text6:hover {
     background-color: #16161e;
-    cursor: grab;
     color: yellow;
+    user-select: none;
 }
 
 @media only screen and (max-width: 1000px) {
