--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,6 +1,6 @@
 
 .home {
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 h2 {
@@ -10,12 +10,14 @@ h2 {
 
 .color-btn {
     margin-top: 20px;
-    width: 200px;
+    width: 150px;
     height: 20px;
     border-radius: 50%;
     box-shadow: 5px 5px 5px 0 rgb(0, 0, 0);
     font-family: monospace;
     cursor: pointer;
+    background-color: #F4D03F;
+    font-weight: bold;
 }
 
 .one {
