--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -12,7 +12,7 @@ h2 {
     margin-top: 20px;
     width: 150px;
     height: 20px;
-    border-radius: 50%;
+    border-radius: 50px;
     box-shadow: 5px 5px 5px 0 rgb(0, 0, 0);
     font-family: monospace;
     cursor: pointer;
