--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
-  background: #16161e;
-  text-align: center;
+	background: #16161e;
+	text-align: center;
 }
