--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,72 +1,27 @@
-
 .home {
-    margin-top: 30px;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+	width: 70%;
+	margin: auto;
+	gap: 100px;
+	margin-top: 150px;
+	margin-bottom: 150px;
 }
 
-h2 {
-    color: white;
-    font-family: monospace;
+.project-img {
+	width: 450px;
+	height: 450px;
+	object-fit: cover;
+	box-shadow: 0px 0px 40px 1px #000000;
+	border-radius: 10px;
 }
 
-.color-btn {
-    margin-top: 70px;
-    width: 150px;
-    font-size: 18px;
-    height: 40px;
-    border-radius: 50px;
-    box-shadow: 5px 5px 5px 0 rgb(0, 0, 0);
-    font-family: monospace;
-    cursor: pointer;
-    background-color: #F4D03F;
-    font-weight: bold;
+.project-detail {
+	width: 450px;
+	margin: auto;
+	border-radius: 10px;
+	height: 100px;
 }
 
-.color-btn:hover {
-    border: 2px solid #F4D03F;
-    background-color: #16161e;
-    color: #F4D03F;
-}
-
-.one {
-    color: #DC7633;
-    font-size: 25px;
-}
-
-.two {
-    color: #A569BD;
-    font-size: 25px;
-}
-
-.three {
-    color: #5499C7;
-    font-size: 25px;
-}
-
-.four {
-    color: #CD6155;
-    font-size: 25px;
-}
-
-.five {
-    color: #52BE80;
-    font-size: 25px;
-}
-
-.six {
-    color: #F4D03F;
-    font-size: 25px;
-}
-
-@media only screen and (max-width: 1000px) {
-
-    .home {
-        margin-top: 50px;
-    }
-
-    .text-name {
-        margin-top: 10px;
-        margin-bottom: 10px;
-
-    }
-   
+@media only screen and (max-width: 600px) {
 }
