--- a/src/components/styles/Menu.css
+++ b/src/components/styles/Menu.css
@@ -1,90 +1,78 @@
 .menu-container {
-    position: relative;
-    margin-left: 10px;
-    width: 20px;
+	position: relative;
+	margin-left: 10px;
+	width: 20px;
+	z-index: 1;
 }
 
 .menu {
-    width: 19.5vw;
-    position: absolute;
-    top: 50;
-    z-index: 999;
-    left: -22vw;
-    transition: left 0.5s ease-in;
-    margin-top: 15px;
+	width: 19.5vw;
+	position: absolute;
+	top: 50;
+	z-index: 999;
+	left: -22vw;
+	transition: left 0.5s ease-in;
+	margin-top: 15px;
 }
 
 .menu.show {
-    left: 0;
+	left: 0;
 }
 
 .menu-items {
-    padding: 0;
-    margin: 0;
+	padding: 0;
+	margin: 0;
 }
 
 .menu-link:hover {
-    background-color: #16161e;
-    color: white;
+	background-color: #16161e;
+	color: white;
 }
 
 .menu-list {
-    list-style: none;
+	list-style: none;
 }
 
 .menu-button {
-    display: flex;
-    position: relative;
-    font-size: 30px;
-    cursor: pointer;
-    color: #16161e;
-    margin-top: 12px;
+	display: flex;
+	position: relative;
+	font-size: 30px;
+	cursor: pointer;
+	color: #16161e;
+	margin-top: 12px;
 }
 
 .menu-button2 {
-    display: flex;
-    position: relative;
-    font-size: 30px;
-    cursor: pointer;
-    color: #16161e;
-    margin-top: 12px;
+	display: flex;
+	position: relative;
+	font-size: 30px;
+	cursor: pointer;
+	color: #16161e;
+	margin-top: 12px;
 }
-
 
 .menu2 {
-    width: 19.5vw;
-    position: absolute;
-    top: 50;
-    z-index: 999;
-    transition: left 0.5s ease-in;
-    margin-top: 15px;
-
-}
-
-.menu3 {
-    width: 19.5vw;
-    position: absolute;
-    top: 50;
-    z-index: 999;
-    transition: left 0.5s ease-in;
-    margin-top: 15px;
+	width: 19.5vw;
+	position: absolute;
+	top: 50;
+	z-index: 999;
+	transition: left 0.5s ease-in;
+	margin-top: 15px;
 }
 
 .menu-link {
-    color: #16161e;
-    padding: 10px 15px;
-    display: flex;
-    border: 2px solid #16161e;
-    font-family: monospace;
-    text-decoration: none;
-    font-size: 20px;
+	color: #16161e;
+	padding: 10px 15px;
+	display: flex;
+	border: 2px solid #16161e;
+	font-family: monospace;
+	text-decoration: none;
+	font-size: 20px;
 }
 
-@media only screen and (max-width: 1000px) {
-
-    .menu-button, .menu-container {
-        display: none;
-    }
-
-
+@media only screen and (max-width: 600px) {
+	.menu-button,
+	.menu-container {
+		display: none;
+	}
 }
