--- a/src/components/styles/Rainbow.css
+++ b/src/components/styles/Rainbow.css
@@ -1,51 +1,55 @@
 h2 {
-    color: white;
-    margin-top: 30px;
+	color: white;
+	margin-top: 30px;
 }
 .box {
-    margin: auto;
-    margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 100%;
+	margin: auto;
+	margin-top: 20px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	width: 100%;
+}
+
+.box-container {
+	display: flex;
+	justify-content: center;
 }
 
 .each-box {
-    box-shadow: 10px 10px 10px 0 rgb(0, 0, 0);
+	box-shadow: 10px 10px 10px 0 rgb(0, 0, 0);
 }
 .each-box:hover {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 .details {
-    display: flex;
-    margin: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    height: 20px;
-    width: 70%;
-    text-align: center;
-    justify-content: center;
+	display: flex;
+	margin: auto;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	height: 20px;
+	width: 70%;
+	text-align: center;
+	justify-content: center;
 }
 
 .rainbow-box {
-    margin-top: 100px ;
-    margin-bottom: 20px ;
-
+	margin-top: 100px;
+	margin-bottom: 20px;
 }
 
-@media only screen and (max-width: 1000px) {
-    .box {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 20px;
-        margin: auto;
-    }
-    h2 {
-        margin-top: 70px;
-    }
-    .rainbow-box {
-        margin-top: 170px ;
-    }
+@media only screen and (max-width: 600px) {
+	.box {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: 20px;
+		margin: auto;
+	}
+	h2 {
+		margin-top: 70px;
+	}
+	.rainbow-box {
+		margin-top: 170px;
+	}
 }
