--- a/src/components/styles/Logo.css
+++ b/src/components/styles/Logo.css
@@ -25,7 +25,7 @@
 .speed-num {
 	color: white;
 	margin: 50px;
-	font-family: monospace;
+	font-family: 'Source Code Pro', monospace;
 	font-size: 20px;
 	margin: 0;
 	padding: 0px 10px;
