--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Roboto+Mono:ital@1&family=Source+Code+Pro:wght@400;500&display=swap');
 * {
 	box-sizing: border-box;
 }
@@ -5,4 +6,5 @@
 body {
 	background: #16161e;
 	text-align: center;
+	font-family: 'Source Code Pro', monospace;
 }
