--- a/src/components/styles/Resume.css
+++ b/src/components/styles/Resume.css
@@ -17,6 +17,7 @@
 	border: 1px solid white;
 	border-radius: 10px;
 	box-shadow: 0px 0px 30px 2px #000000;
+	line-height: 1.5;
 }
 
 h2 {
@@ -37,6 +38,7 @@ h2 {
 	border: 1px solid white;
 	border-radius: 10px;
 	box-shadow: 0px 0px 30px 2px #000000;
+	line-height: 1.5;
 }
 
 .box2 {
@@ -57,6 +59,7 @@ h2 {
 	border: 1px solid white;
 	border-radius: 10px;
 	box-shadow: 0px 0px 30px 2px #000000;
+	line-height: 1.5;
 }
 
 .box3 {
@@ -73,6 +76,7 @@ h2 {
 	border: 1px solid white;
 	border-radius: 10px;
 	box-shadow: 0px 0px 30px 2px #000000;
+	line-height: 1.5;
 }
 
 .box4 {
