--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -20,7 +20,7 @@
 	margin-right: 25px;
 }
 
-.active {
+.active-nav {
 	float: right;
 	padding-left: 20px;
 	padding-right: 20px;
@@ -37,9 +37,9 @@
 	color: #5499c7;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
 	.nav {
-		font-size: 14px;
+		font-size: 1.1vh;
 		padding-left: 0px;
 		padding-right: 0px;
 	}
