--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,14 +1,45 @@
+.container {
+	margin-top: 50px;
+}
+
+.project-container {
+	width: 400px;
+	margin: auto;
+}
+.overlay {
+	position: absolute;
+	width: 400px;
+	height: 400px;
+	opacity: .9;
+}
+
+.overlay:hover {
+	opacity: 0;
+}
+
+.container h1 {
+	margin-top: 70px;
+}
+
 .home {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 	width: 80%;
 	margin: auto;
 	gap: 100px;
-	margin-top: 100px;
-	margin-bottom: 100px;
+	margin-top: 60px;
+	margin-bottom: 60px;
+	justify-content: center;
+	text-align: center;
+}
+
+h3 {
+	color: white;
+	margin: 0;
 }
 
 .project-img {
+	cursor: pointer;
 	width: 400px;
 	height: 400px;
 	object-fit: cover;
