--- a/src/components/styles/TextBox.css
+++ b/src/components/styles/TextBox.css
@@ -24,6 +24,8 @@ h2 {
 	color: white;
 	font-weight: bold;
 	font-family: 'Source Code Pro', monospace;
+	margin: 0;
+	line-height: 1.5;
 }
 
 .green {
@@ -34,7 +36,7 @@ h2 {
 
 @media only screen and (max-width: 600px) {
 	.text-box {
-		width: 500px;
+		width: 300px;
 		height: 100px;
 	}
 	h2 {
