--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -56,6 +56,14 @@ h3 {
 	padding: 10px;
 }
 
+.project-container p {
+	color: white;
+	margin-top: 10px;
+	height: 60px;
+	width: 100%;
+	padding: 10px;
+}
+
 .project-name {
 	margin: 0;
 	color: white;
