--- a/src/components/styles/TextBox.css
+++ b/src/components/styles/TextBox.css
@@ -29,7 +29,7 @@ h2 {
 }
 
 .green {
-	color: rgb(9, 255, 0);
+	color: #407d0a;
 	font-weight: bold;
 	font-family: 'Source Code Pro', monospace;
 }
