--- a/src/components/styles/Resume.css
+++ b/src/components/styles/Resume.css
@@ -8,12 +8,12 @@
 }
 
 .text1 {
-	color: #dc7633;
+	color: #d19a41;
 	font-family: 'Source Code Pro', monospace;
 	padding: 10px;
 	font-size: 20px;
 	margin-bottom: 10px;
-	background-color: #dc7633;
+	background-color: #d19a41;
 	border: 1px solid white;
 	border-radius: 10px;
 	box-shadow: 0px 0px 30px 2px #000000;
@@ -29,12 +29,12 @@ h2 {
 }
 
 .text2 {
-	color: #a569bd;
+	color: #d63a41;
 	font-family: 'Source Code Pro', monospace;
 	padding: 10px;
 	font-size: 20px;
 	margin-bottom: 10px;
-	background-color: #a569bd;
+	background-color: #d63a41;
 	border: 1px solid white;
 	border-radius: 10px;
 	box-shadow: 0px 0px 30px 2px #000000;
@@ -50,12 +50,12 @@ h2 {
 }
 
 .text3 {
-	color: #5499c7;
+	color: #40a4db;
 	font-family: 'Source Code Pro', monospace;
 	padding: 10px;
 	font-size: 20px;
 	margin-bottom: 10px;
-	background-color: #5499c7;
+	background-color: #40a4db;
 	border: 1px solid white;
 	border-radius: 10px;
 	box-shadow: 0px 0px 30px 2px #000000;
@@ -67,12 +67,12 @@ h2 {
 }
 
 .text4 {
-	color: #cd6155;
+	color: #8d216d;
 	font-family: 'Source Code Pro', monospace;
 	padding: 10px;
 	font-size: 20px;
 	margin-bottom: 10px;
-	background-color: #cd6155;
+	background-color: #8d216d;
 	border: 1px solid white;
 	border-radius: 10px;
 	box-shadow: 0px 0px 30px 2px #000000;
@@ -84,24 +84,24 @@ h2 {
 }
 
 .text5 {
-	color: #52be80;
+	color: #407d0a;
 	font-family: 'Source Code Pro', monospace;
 	padding: 10px;
 	font-size: 20px;
 	margin-bottom: 10px;
-	background-color: #52be80;
+	background-color: #407d0a;
 	border: 1px solid white;
 	border-radius: 20px;
 	box-shadow: 0px 0px 20px 2px #000000;
 }
 
 .text6 {
-	color: #f4d03f;
+	color: #c24523;
 	font-family: 'Source Code Pro', monospace;
 	padding: 10px;
 	font-size: 20px;
 	margin-bottom: 10px;
-	background-color: #f4d03f;
+	background-color: #c24523;
 	border: 1px solid white;
 	border-radius: 20px;
 	box-shadow: 0px 0px 20px 2px #000000;
