--- a/src/components/styles/Bar.css
+++ b/src/components/styles/Bar.css
@@ -9,5 +9,5 @@
 	height: 310px;
 	background-color: #16161e;
 	transition: all 100ms linear;
-	background-image: linear-gradient(to right, #d19a41, #8d216d, #40a4db, #407d0a);
+	background-image: linear-gradient(to right, #f4d03f, #f39c12, #e74c3c, #af7ac5, #5dade2, #52be80);
 }
